--- a/wikipedia.user.css
+++ b/wikipedia.user.css
@@ -4,7 +4,7 @@
 @homepageURL https://github.com/lynn/wikipedia-css
 @version 1.0.0
 @updateURL https://raw.githubusercontent.com/lynn/wikipedia-css/master/wikipedia.css
-@description An experimental Wikipedia theme with dem Tufte floats.
+@description An experimental Wikipedia theme with figures floated into the margins.
 @author Lynn
 @license MIT
 ==/UserStyle== */
