--- a/wikipedia.user.css
+++ b/wikipedia.user.css
@@ -3,7 +3,7 @@
 @namespace github.com/lynn/wikipedia-css
 @homepageURL https://github.com/lynn/wikipedia-css
 @version 1.0.1
-@updateURL https://raw.githubusercontent.com/lynn/wikipedia-css/master/wikipedia.css
+@updateURL https://raw.githubusercontent.com/lynn/wikipedia-css/master/wikipedia.user.css
 @description An experimental Wikipedia theme with figures floated into the margins.
 @author Lynn
 @license MIT
